# rumi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docker/: Dockerfile.runner
docs/: MEMORY.md  architecture.md  decisions.md  memory-system.md  skills-system.md
feature/: memory-system-design.md  message-bus-system-design.md  skills-system-design.md
references/: rumi-plan-v1.2.md  rumi.mermaid
research/: agent-loop-analysis.md  learnings.md  memory-system-analysis.md  skills-system-analysis.md
src/miniclaw/: cli.py  logging.py
src/miniclaw/agent/: loop.py  prompt.py
src/miniclaw/memory/: __init__.py  extractor.py  manager.py  store.py  tools.py
src/miniclaw/session/: manager.py
src/miniclaw/skills/: __init__.py  base.py  cli.py  code_skill.py  config.py  executor_tool.py  llm_client.py  manager.py
src/miniclaw/telegram/: bot.py
src/rumi/: __init__.py  cli.py  conversation_logger.py  logging.py  main.py
tests/: __init__.py  test_agent.py  test_bash_tool.py  test_cli.py  test_logging.py  test_main.py  test_sandbox.py  test_session.py  test_telegram.py  test_tools.py  test_web_fetch.py
tests/agent/: test_loop_memory.py  test_prompt.py
tests/memory/: __init__.py  test_extractor.py  test_integration.py  test_manager.py  test_models.py  test_store.py  test_tools.py
tests/skills/: __init__.py  test_base.py  test_bundled_skills.py  test_code_skill.py  test_config.py  test_executor_tool.py  test_llm_client.py  test_manager.py  test_parser.py  test_prompt_skill.py  test_skills_cli.py
tests/tools/: test_web_search.py
(+40 files in other folders)
